# stylish-haskell

./: .ghci  .gitignore  .pre-commit-hooks.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG  LICENSE  Makefile  README.markdown  cabal.project  cabal.project.local  default.nix  flake.nix  haskell-pkgs.nix  shell.nix  stack.yaml  stylish-haskell-imports.cabal  stylish-haskell.cabal
.circleci/: config.yml  release.sh
.github/workflows/: cabal.yml  ci.yml
app/: Main.hs
data/: stylish-haskell.yaml
doc/: release.md  stylish-haskell.1.adoc
draft/: Block.hs  Imports.hs
examples/: Bad.hs  Cpp.hsc
lib/Language/Haskell/: Stylish.hs
lib/Language/Haskell/Stylish/: Align.hs  AlignGHC.hs  Block.hs  Comments.hs  Config.hs  Editor.hs  GHC.hs  Module.hs  Ordering.hs  Parse.hs  ParseGHC.hs  Printer.hs  Replacements.hs  Step.hs  Util.hs  Verbose.hs
lib/Language/Haskell/Stylish/Config/: Cabal.hs  Internal.hs
lib/Language/Haskell/Stylish/Printer/: Decl.hs  Imports.hs  Module.hs  ModuleHeader.hs
lib/Language/Haskell/Stylish/Step/: Cases.hs  Data.hs  Imports'.hs  Imports.hs  ImportsGHC.hs  LanguagePragmas.hs  ModuleHeader.hs  Records.hs  Signature.hs  SimpleAlign.hs  SimpleAlignGHC.hs  Squash.hs  Tabs.hs  TrailingWhitespace.hs  UnicodeSyntax.hs
scripts/: latest.sh  stylish-haskell.sh
src/: Main.hs  StylishHaskell.hs  StylishHaskellImports.hs
src/Language/Haskell/: Stylish.hs
src/Language/Haskell/Stylish/: Block.hs  Config.hs  Editor.hs  Parse.hs  Util.hs  Wrap.hs
src/Language/Haskell/Stylish/Step/: Imports.hs  LanguagePragmas.hs  Records.hs  TrailingWhitespace.hs  UnicodeSyntax.hs
src/StylishHaskell/: Block.hs  Config.hs  Editor.hs  Imports.hs  LanguagePragmas.hs  Parse.hs  Step.hs  Stylish.hs  Tabs.hs  TrailingWhitespace.hs  Util.hs  Verbose.hs
src/StylishHaskell/Step/: Imports.hs  LanguagePragmas.hs  Records.hs  Tabs.hs  TrailingWhitespace.hs  UnicodeSyntax.hs
src/StylishHaskell/Stylish/: Catalog.hs  Imports.hs  LanguagePragmas.hs  Tabs.hs  TrailingWhitespace.hs  UnicodeSyntax.hs
testdata/: test-config.yaml
tests/: TestSuite.hs
tests/Language/Haskell/: StylishSpec.hs
tests/Language/Haskell/Stylish/: Disabling.hs  Regressions.hs  Tests.hs
tests/Language/Haskell/Stylish/Config/: Tests.hs
tests/Language/Haskell/Stylish/Parse/: Tests.hs
tests/Language/Haskell/Stylish/Printer/Imports/: Tests.hs
tests/Language/Haskell/Stylish/Printer/ModuleHeader/: Tests.hs
tests/Language/Haskell/Stylish/Step/Cases/: Tests.hs
tests/Language/Haskell/Stylish/Step/Data/: Tests.hs
tests/Language/Haskell/Stylish/Step/Imports/: FelixTests.hs  Tests.hs
tests/Language/Haskell/Stylish/Step/Imports'/: Tests.hs
tests/Language/Haskell/Stylish/Step/ImportsGHC/: Tests.hs
tests/Language/Haskell/Stylish/Step/LanguagePragmas/: Tests.hs
tests/Language/Haskell/Stylish/Step/ModuleHeader/: Tests.hs
tests/Language/Haskell/Stylish/Step/Records/: Tests.hs
tests/Language/Haskell/Stylish/Step/Signature/: Tests.hs
tests/Language/Haskell/Stylish/Step/SimpleAlign/: Tests.hs
tests/Language/Haskell/Stylish/Step/Squash/: Tests.hs
tests/Language/Haskell/Stylish/Step/Tabs/: Tests.hs
tests/Language/Haskell/Stylish/Step/TrailingWhitespace/: Tests.hs
tests/Language/Haskell/Stylish/Step/UnicodeSyntax/: Tests.hs
tests/Language/Haskell/Stylish/Tests/: Util.hs
tests/StylishHaskell/Imports/: Tests.hs
tests/StylishHaskell/LanguagePragmas/: Tests.hs
tests/StylishHaskell/Parse/: Tests.hs
tests/StylishHaskell/Step/Imports/: Tests.hs
tests/StylishHaskell/Step/LanguagePragmas/: Tests.hs
tests/StylishHaskell/Step/Records/: Tests.hs
tests/StylishHaskell/Step/Tabs/: Tests.hs
tests/StylishHaskell/Step/TrailingWhitespace/: Tests.hs
tests/StylishHaskell/Step/UnicodeSyntax/: Tests.hs
tests/StylishHaskell/Stylish/Imports/: Tests.hs
tests/StylishHaskell/Stylish/LanguagePragmas/: Tests.hs
tests/StylishHaskell/Stylish/Tabs/: Tests.hs
tests/StylishHaskell/Stylish/TrailingWhitespace/: Tests.hs
tests/StylishHaskell/Stylish/UnicodeSyntax/: Tests.hs
tests/StylishHaskell/Tabs/: Tests.hs
tests/StylishHaskell/Tests/: Util.hs
tests/StylishHaskell/TrailingWhitespace/: Tests.hs
tests/StylishHaskellImports/: Tests.hs
