Name:          stylish-haskell-imports
Version:       0.1.0.0
Synopsis:      Align and sort imports in Haskell source code
Description:   Align and sort imports in Haskell source code
Homepage:      https://github.com/jaspervdj/stylish-haskell-imports
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Jasper Van der Jeugt
Category:      Language
Build-type:    Simple
Cabal-version: >= 1.8

Executable stylish-haskell-imports
  Ghc-options:    -Wall -O2
  Hs-source-dirs: src
  Main-is:        Main.hs

  Other-modules:
    StylishHaskell.Block
    StylishHaskell.Editor
    StylishHaskell.Imports
    StylishHaskell.Parse

  Build-depends:
    base             >= 4    && < 5,
    haskell-src-exts >= 1.13 && < 1.14

Test-suite stylish-haskell-imports-tests
  Ghc-options:    -Wall
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    StylishHaskell.Imports.Tests

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    -- Copied from regular dependencies...
    base             >= 4    && < 5,
    haskell-src-exts >= 1.13 && < 1.14

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/websockets
