Name:          stylish-haskell
Version:       0.9.4.4
Synopsis:      Haskell code prettifier
Homepage:      https://github.com/jaspervdj/stylish-haskell
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2012 Jasper Van der Jeugt
Category:      Language
Build-type:    Simple
Cabal-version: >= 1.8

Description:
    A Haskell code prettifier. For more information, see:

    .

    <https://github.com/jaspervdj/stylish-haskell/blob/master/README.markdown>

Extra-source-files:
  CHANGELOG,
  README.markdown,
  data/stylish-haskell.yaml

Library
  Hs-source-dirs: lib
  Ghc-options:    -Wall

  Exposed-modules:
    Language.Haskell.Stylish
    Language.Haskell.Stylish.Step.Imports
    Language.Haskell.Stylish.Step.LanguagePragmas
    Language.Haskell.Stylish.Step.SimpleAlign
    Language.Haskell.Stylish.Step.Squash
    Language.Haskell.Stylish.Step.Tabs
    Language.Haskell.Stylish.Step.TrailingWhitespace
    Language.Haskell.Stylish.Step.UnicodeSyntax

  Other-modules:
    Language.Haskell.Stylish.Align
    Language.Haskell.Stylish.Block
    Language.Haskell.Stylish.Config
    Language.Haskell.Stylish.Config.Cabal
    Language.Haskell.Stylish.Config.Internal
    Language.Haskell.Stylish.Editor
    Language.Haskell.Stylish.Parse
    Language.Haskell.Stylish.Step
    Language.Haskell.Stylish.Util
    Language.Haskell.Stylish.Verbose
    Paths_stylish_haskell

  Build-depends:
    aeson            >= 0.6    && < 1.5,
    base             >= 4.8    && < 5,
    bytestring       >= 0.9    && < 0.11,
    Cabal            >= 2.4    && < 3.1,
    containers       >= 0.3    && < 0.7,
    directory        >= 1.2.3  && < 1.4,
    filepath         >= 1.1    && < 1.5,
    file-embed       >= 0.0.10 && < 0.1,
    haskell-src-exts >= 1.18   && < 1.23,
    mtl              >= 2.0    && < 2.3,
    semigroups       >= 0.18   && < 0.20,
    syb              >= 0.3    && < 0.8,
    yaml             >= 0.8.11 && < 0.12

Executable stylish-haskell
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Main-is:        Main.hs

  Build-depends:
    stylish-haskell,
    strict               >= 0.3  && < 0.4,
    optparse-applicative >= 0.12 && < 0.16,
    -- Copied from regular dependencies...
    aeson            >= 0.6    && < 1.5,
    base             >= 4.8    && < 5,
    bytestring       >= 0.9    && < 0.11,
    Cabal            >= 2.4    && < 3.1,
    containers       >= 0.3    && < 0.7,
    directory        >= 1.2.3  && < 1.4,
    filepath         >= 1.1    && < 1.5,
    file-embed       >= 0.0.10 && < 0.1,
    haskell-src-exts >= 1.18   && < 1.23,
    mtl              >= 2.0    && < 2.3,
    syb              >= 0.3    && < 0.8,
    yaml             >= 0.8.11 && < 0.12

Test-suite stylish-haskell-tests
  Ghc-options:    -Wall
  Hs-source-dirs: tests lib
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    Language.Haskell.Stylish.Align
    Language.Haskell.Stylish.Block
    Language.Haskell.Stylish.Config
    Language.Haskell.Stylish.Config.Cabal
    Language.Haskell.Stylish.Config.Internal
    Language.Haskell.Stylish.Config.Tests
    Language.Haskell.Stylish.Editor
    Language.Haskell.Stylish.Parse
    Language.Haskell.Stylish.Parse.Tests
    Language.Haskell.Stylish.Step
    Language.Haskell.Stylish.Step.Imports
    Language.Haskell.Stylish.Step.Imports.Tests
    Language.Haskell.Stylish.Step.LanguagePragmas
    Language.Haskell.Stylish.Step.LanguagePragmas.Tests
    Language.Haskell.Stylish.Step.SimpleAlign
    Language.Haskell.Stylish.Step.SimpleAlign.Tests
    Language.Haskell.Stylish.Step.Squash
    Language.Haskell.Stylish.Step.Squash.Tests
    Language.Haskell.Stylish.Step.Tabs
    Language.Haskell.Stylish.Step.Tabs.Tests
    Language.Haskell.Stylish.Step.TrailingWhitespace
    Language.Haskell.Stylish.Step.TrailingWhitespace.Tests
    Language.Haskell.Stylish.Step.UnicodeSyntax
    Language.Haskell.Stylish.Step.UnicodeSyntax.Tests
    Language.Haskell.Stylish.Tests.Util
    Language.Haskell.Stylish.Util
    Language.Haskell.Stylish.Verbose

  Build-depends:
    HUnit                >= 1.2 && < 1.7,
    test-framework       >= 0.4 && < 0.9,
    test-framework-hunit >= 0.2 && < 0.4,
    random               >= 1.1,
    -- Copied from regular dependencies...
    aeson            >= 0.6    && < 1.5,
    base             >= 4.8    && < 5,
    bytestring       >= 0.9    && < 0.11,
    Cabal            >= 2.4    && < 3.1,
    containers       >= 0.3    && < 0.7,
    directory        >= 1.2.3  && < 1.4,
    filepath         >= 1.1    && < 1.5,
    file-embed       >= 0.0.10 && < 0.1,
    haskell-src-exts >= 1.18   && < 1.23,
    mtl              >= 2.0    && < 2.3,
    syb              >= 0.3    && < 0.8,
    yaml             >= 0.8.11 && < 0.12

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/stylish-haskell
